force-app/main/default/objects/OneCRM__LookupParent__c/fields/OneCRM__Descriptions2__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Descriptions2__c</fullName>
    <label>Descriptions 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>