force-app/main/default/objects/OneCRM__LookupParent__c/fields/OneCRM__Descriptions__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Descriptions__c</fullName>
    <label>Descriptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>