force-app/main/default/objects/OneCRM__LookupParent__c/fields/OneCRM__Total2__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Total2__c</fullName>
    <label>Total 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>