force-app/main/default/objects/OneCRM__LookupParent__c/validationRules/OneCRM__Not_42.validationRule-meta.xml
<ValidationRule>
    <fullName>OneCRM__Not_42</fullName>
    <active>true</active>
    <errorConditionFormula>OneCRM__Total__c !=42</errorConditionFormula>
    <errorDisplayField>OneCRM__Total__c</errorDisplayField>
    <errorMessage>The answer is not 42!</errorMessage>
</ValidationRule>