force-app/main/default/objects/OneCRM__LookupParent__c/listViews/OneCRM__All.listView-meta.xml
<ListView>
    <fullName>OneCRM__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>